Throw runtime exceptions instead of normal exceptions