@@ -24,7 +24,7 @@ public class DockerSlave extends AbstractSlave {
      *
      * @param classLoaders a list of classloaders to supply classes to the safeNativeCode.slave
      */
-    public DockerSlave(int timeLimit, String[] args, ClassLoader... classLoaders) throws IOException, InterruptedException {
+    public DockerSlave(int timeLimit, String[] args, ClassLoader... classLoaders) {
         this(timeLimit, args, Collections.emptyList(), classLoaders);
     }
 
@@ -35,42 +35,46 @@ public class DockerSlave extends AbstractSlave {
      *                     Paths are mounted at /shared/path
      * @param classLoaders a list of classloaders to supply classes to the safeNativeCode.slave
      */
-    public DockerSlave(int timeLimit, String[] jArgs, List<Path> pathsToShare, ClassLoader... classLoaders) throws IOException, InterruptedException {
+    public DockerSlave(int timeLimit, String[] jArgs, List<Path> pathsToShare, ClassLoader... classLoaders) {
         super(timeLimit, jArgs, classLoaders);
-        //Pull first so we can easily get status
-        new ProcessBuilder("docker", "pull", DOCKER_IMAGE).inheritIO().start().waitFor();
-        if (hasTimedOut()) return;
-        List<String> args = new ArrayList<>(Arrays.asList("docker", "create", "--rm", "--network", "host"));
-        if (Utils.isUnix()) {
-            String username = System.getProperty("user.name");
-            String uid = new String(Utils.readStream(Runtime.getRuntime().exec("id -u " + username).getInputStream())).trim();
-            String gid = new String(Utils.readStream(Runtime.getRuntime().exec("id -g " + username).getInputStream())).trim();
-            args.addAll(Arrays.asList("--user", uid + ":" + gid));
-        } else {
-            args.addAll(Arrays.asList("--user", System.getProperty("user.name")));
-        }
-        for (String cp : getClassPath()) {
-            if (Files.exists(Paths.get(cp))) {
-                args.addAll(Arrays.asList("-v", cp + ":/safeNativeCode/" + cp + ":ro"));
+        try {
+            //Pull first so we can easily get status
+            new ProcessBuilder("docker", "pull", DOCKER_IMAGE).inheritIO().start().waitFor();
+            if (hasTimedOut()) return;
+            List<String> args = new ArrayList<>(Arrays.asList("docker", "create", "--rm", "--network", "host"));
+            if (Utils.isUnix()) {
+                String username = System.getProperty("user.name");
+                String uid = new String(Utils.readStream(Runtime.getRuntime().exec("id -u " + username).getInputStream())).trim();
+                String gid = new String(Utils.readStream(Runtime.getRuntime().exec("id -g " + username).getInputStream())).trim();
+                args.addAll(Arrays.asList("--user", uid + ":" + gid));
+            } else {
+                args.addAll(Arrays.asList("--user", System.getProperty("user.name")));
             }
+            for (String cp : getClassPath()) {
+                if (Files.exists(Paths.get(cp))) {
+                    args.addAll(Arrays.asList("-v", cp + ":/safeNativeCode/" + cp + ":ro"));
+                }
+            }
+            pathsToShare.forEach(path -> {
+                String p = path.toAbsolutePath().toString();
+                args.addAll(Arrays.asList("-v", p + ":/shared/" + p));
+            });
+            args.add(DOCKER_IMAGE);
+            args.addAll(Arrays.asList(getJavaCommandArgs("java", "/safeNativeCode/")));
+            Process process = new ProcessBuilder(args).start();
+            process.waitFor();
+            containerID = new String(Utils.readStream(process.getInputStream())).trim();
+            String error = new String(Utils.readStream(process.getErrorStream())).trim();
+            if (!error.isEmpty()) {
+                System.out.println("An error occurred while starting docker container:");
+                System.out.println(error);
+                return;
+            }
+            this.process = new ProcessBuilder("docker", "start", "-a", "-i", containerID).inheritIO().start();
+            setupRegistry();
+        } catch (IOException | InterruptedException ex) {
+            throw new RuntimeException(ex);
         }
-        pathsToShare.forEach(path -> {
-            String p = path.toAbsolutePath().toString();
-            args.addAll(Arrays.asList("-v", p + ":/shared/" + p));
-        });
-        args.add(DOCKER_IMAGE);
-        args.addAll(Arrays.asList(getJavaCommandArgs("java", "/safeNativeCode/")));
-        Process process = new ProcessBuilder(args).start();
-        process.waitFor();
-        containerID = new String(Utils.readStream(process.getInputStream())).trim();
-        String error = new String(Utils.readStream(process.getErrorStream())).trim();
-        if (!error.isEmpty()) {
-            System.out.println("An error occurred while starting docker container:");
-            System.out.println(error);
-            return;
-        }
-        this.process = new ProcessBuilder("docker", "start", "-a", "-i", containerID).inheritIO().start();
-        setupRegistry();
     }
 
     @Override
